[dev] test - hooks

--- a/test/hooks/main.hook.yml
+++ b/test/hooks/main.hook.yml
@@ -1,6 +1,6 @@
 - name: "[hook] {{ hook_name }}"
   debug:
-    msg: "name [{{ env.name }}] - ctx [{{ env_ctx }}]"
+    msg: "name [{{ env.name }}] - ctx [{{ env_ctx_name }}]"
   tags: ["no_print_skipped"]
 
 - name: "[hook] {{ hook_name }} - host included"
@@ -11,28 +11,27 @@
     and
     (instance_type in (env.custom_cloud_params[hook_name] | default([])))
   tags: ["no_print_skipped"]
+# - name: "[hook] {{ hook_name }} - custom tasks"
+#   include_tasks: "{{ tmp_task }}"
+#   vars:
+#     tmp_task: >-
+#       {{ env_ctx_params.custom_tasks[hook_item] | default('') }}
+#     custom_task_info: "task {{ hook_item }} - hook {{ hook_name }}"
+#   loop: "{{ env_ctx_params.x_custom_tasks | default([]) }}"
+#   loop_control:
+#     loop_var: hook_item
+#   when: tmp_task != ''
+#   tags: ["no_print_skipped"]
 
-- name: "[hook] {{ hook_name }} - custom tasks"
-  include_tasks: "{{ tmp_task }}"
-  vars:
-    tmp_task: >-
-      {{ env_ctx_params.custom_tasks[hook_item] | default('') }}
-    custom_task_info: "task {{ hook_item }} - hook {{ hook_name }}"
-  loop: "{{ env_ctx_params.x_custom_tasks | default([]) }}"
-  loop_control:
-    loop_var: hook_item
-  when: tmp_task != ''
-  tags: ["no_print_skipped"]
-
-- name: "[hook] {{ hook_name }} - custom roles"
-  include_role:
-    name: "{{ tmp_role }}"
-  vars:
-    tmp_role: >-
-      {{ env_ctx_params.custom_roles[hook_item] | default('') }}
-    custom_role_info: "role {{ hook_item }} - hook {{ hook_name }}"
-  loop: "{{ env_ctx_params.x_custom_roles | default([]) }}"
-  loop_control:
-    loop_var: hook_item
-  when: tmp_role != ''
-  tags: ["no_print_skipped"]
+# - name: "[hook] {{ hook_name }} - custom roles"
+#   include_role:
+#     name: "{{ tmp_role }}"
+#   vars:
+#     tmp_role: >-
+#       {{ env_ctx_params.custom_roles[hook_item] | default('') }}
+#     custom_role_info: "role {{ hook_item }} - hook {{ hook_name }}"
+#   loop: "{{ env_ctx_params.x_custom_roles | default([]) }}"
+#   loop_control:
+#     loop_var: hook_item
+#   when: tmp_role != ''
+#   tags: ["no_print_skipped"]
