--- a/test/roles/role1/tasks/main.yml
+++ b/test/roles/role1/tasks/main.yml
@@ -1,3 +1,3 @@
 - name: "[custom_role] - inside role1 ({{ custom_role_info }})"
   debug:
-    msg: "name [{{ env.name }}] - ctx [{{ env_ctx }}]"
+    msg: "name [{{ env.name }}] - ctx [{{ env_ctx_name }}]"
