--- a/test/hooks/after_prepare_pods.yml
+++ b/test/hooks/after_prepare_pods.yml
@@ -1,4 +1,4 @@
 - include_tasks: "main.hook.yml"
   vars:
-    hook_name: "before_prepare"
+    hook_name: "after_prepare_pods"
   tags: ["no_print_skipped"]
