--- a/test/services/layer/bottom.yml
+++ b/test/services/layer/bottom.yml
@@ -20,6 +20,7 @@
     ext_test_bottom_title: "{{ inner_service_title }} - test bottom"
     ext_test_bottom_params: "{{ inner_service_params }}"
     ext_test_bottom_credentials: "{{ inner_service_credentials }}"
+    ext_test_bottom_contents: "{{ inner_service_contents }}"
     ext_test_bottom_state: "{{ inner_service_state }}"
     ext_test_bottom_base_dir_prefix: "{{ inner_service_base_dir_prefix }}"
     ext_test_bottom_tmp_dir: "{{ inner_service_tmp_dir }}"
@@ -35,22 +36,27 @@
 
 - name: "{{ ext_test_bottom_title }} - print (test) - params"
   debug:
-    var: inner_service_params
+    var: ext_test_bottom_params
   tags: ["no_print_skipped"]
 
 - name: "{{ ext_test_bottom_title }} - print (test) - credentials"
   debug:
-    var: inner_service_credentials
+    var: ext_test_bottom_credentials
+  tags: ["no_print_skipped"]
+
+- name: "{{ ext_test_bottom_title }} - print (test) - contents"
+  debug:
+    var: ext_test_bottom_contents
   tags: ["no_print_skipped"]
 
 - name: "{{ ext_test_bottom_title }} - print (test) - state"
   debug:
-    var: inner_service_state
+    var: ext_test_bottom_state
   tags: ["no_print_skipped"]
 
 - name: "{{ ext_test_bottom_title }} - print (test) - tmp_dir"
   debug:
-    var: inner_service_tmp_dir
+    var: ext_test_bottom_tmp_dir
   tags: ["no_print_skipped"]
 
 - name: "{{ ext_test_bottom_title }} - set result (tmp)"
