--- a/test/services/layer/middle.yml
+++ b/test/services/layer/middle.yml
@@ -20,6 +20,7 @@
     ext_test_middle_title: "{{ inner_service_title }} - test middle"
     ext_test_middle_params: "{{ inner_service_params }}"
     ext_test_middle_credentials: "{{ inner_service_credentials }}"
+    ext_test_middle_contents: "{{ inner_service_contents }}"
     ext_test_middle_state: "{{ inner_service_state }}"
     ext_test_middle_base_dir_prefix: "{{ inner_service_base_dir_prefix }}"
     ext_test_middle_tmp_dir: "{{ inner_service_tmp_dir }}"
@@ -36,6 +37,11 @@
 - name: "{{ ext_test_middle_title }} - print (test) - credentials - before"
   debug:
     var: ext_test_middle_credentials
+  tags: ["no_print_skipped"]
+
+- name: "{{ ext_test_middle_title }} - print (test) - contents - before"
+  debug:
+    var: ext_test_middle_contents
   tags: ["no_print_skipped"]
 
 - name: "{{ ext_test_middle_title }} - print (test) - state - before"
@@ -81,6 +87,11 @@
 - name: "{{ ext_test_middle_title }} - print (test) - credentials - after"
   debug:
     var: ext_test_middle_credentials
+  tags: ["no_print_skipped"]
+
+- name: "{{ ext_test_middle_title }} - print (test) - contents - after"
+  debug:
+    var: ext_test_middle_contents
   tags: ["no_print_skipped"]
 
 - name: "{{ ext_test_middle_title }} - print (test) - state - after"
