--- a/test/services/node/test.main.node.yml
+++ b/test/services/node/test.main.node.yml
@@ -20,6 +20,7 @@
     ext_node_title: "{{ inner_service_title }} - node - test"
     ext_node_params: "{{ inner_service_params }}"
     ext_node_credentials: "{{ inner_service_credentials }}"
+    ext_node_contents: "{{ inner_service_contents }}"
     ext_node_state: "{{ inner_service_state }}"
     ext_node_base_dir_prefix: "{{ inner_service_base_dir_prefix }}"
     ext_node_tmp_dir: "{{ inner_service_tmp_dir }}"
@@ -45,6 +46,10 @@
 - name: "{{ ext_node_title }} - print (test) - node credentials"
   debug:
     var: ext_node_credentials
+
+- name: "{{ ext_node_title }} - print (test) - node contents"
+  debug:
+    var: ext_node_contents
 
 - name: "{{ ext_node_title }} - print (test) - node state"
   debug:
