--- a/test/services/node/test.main.node.yml
+++ b/test/services/node/test.main.node.yml
@@ -31,10 +31,9 @@
 
 - name: "{{ ext_node_title }} - main vars"
   set_fact:
-    ext_node_name: "{{ ext_node_params.name | replace('_', '-') }}"
     ext_node_main_credentials: "{{ ext_node_credentials.node | default({}) }}"
-    ext_node_instance_state: >-
-      {{ ext_node_params.state | default(ext_node_state, true) }}
+    ext_node_user_data: "{{ ext_node_contents.user_data | default('') }}"
+    ext_node_hosts: []
   tags: ["no_print"]
 
 # Main
@@ -75,12 +74,29 @@
     label: "user data {{ tmp_idx }}"
   tags: ["no_print_skipped"]
 
-- name: "{{ ext_node_title }} - ext_node_result"
+- name: "{{ ext_node_title }} - node (outer)"
+  include_tasks: "test.item.node.yml"
+  vars:
+    ext_node_item_name: "{{ ext_node_item.name | replace('_', '-') }}"
+    ext_node_item_state: >-
+      {{
+        ext_node_item.absent
+        | default(false)
+        | ternary('absent', ext_node_state)
+      }}
+    ext_node_item_title: >-
+      {{ ext_node_title }} -
+      node [{{ ext_node_item_name }} ({{ ext_node_item_state }})]
+  loop: "{{ ext_node_params.replicas }}"
+  loop_control:
+    loop_var: ext_node_item
+    label: "{{ ext_node_item_name }}"
+  tags: ["no_print"]
+
+- name: "{{ ext_node_title }} - set result (tmp)"
   set_fact:
     ext_node_result:
-      name: "{{ ext_node_name }}"
-      state: "{{ ext_node_instance_state }}"
-      local: true
+      hosts: "{{ ext_node_hosts }}"
   tags: ["no_print"]
 
 - name: "{{ ext_node_title }} - print (test) - node result"
