--- a/tasks/node/digital_ocean.item.node.yml
+++ b/tasks/node/digital_ocean.item.node.yml
@@ -1,11 +1,9 @@
-- name: >-
-    {{ ext_node_item_title }} - {{ ext_node_item_instance_state }}
-    droplet - {{ ext_node_item_name }}
+- name: "{{ ext_node_item_title }} - droplet"
   digital_ocean_droplet:
     unique_name: yes
     oauth_token: "{{ ext_node_main_credentials.api_token }}"
     name: "{{ ext_node_item_name }}"
-    state: "{{ ext_node_item_instance_state }}"
+    state: "{{ ext_node_item_state }}"
     region_id: "{{ ext_node_params.region_id }}"
     size_id: "{{ ext_node_params.size_id }}"
     image_id: "{{ ext_node_params.image_id }}"
@@ -28,18 +26,18 @@
     resource_id: "{{ ext_node_item_droplet.id }}"
     name: "{{ ext_node_item_inner }}"
     state: "present"
-  loop: "{{ ext_node_params.tags }}"
+  loop: "{{ ext_node_params.tags | default([]) }}"
   loop_control:
     loop_var: ext_node_item_inner
     label: "{{ ext_node_item_name }} - {{ ext_node_item_inner }}"
-  when: ext_node_item_instance_state == 'present'
+  when: ext_node_item_state == 'present'
   tags: ["no_print_skipped"]
 
 - name: "{{ ext_node_item_title }} - set result (tmp)"
   set_fact:
     ext_node_item_result:
       name: "{{ ext_node_item_name }}"
-      state: "{{ ext_node_item_instance_state }}"
+      state: "{{ ext_node_item_state }}"
       private_ip: >-
         {{
           ext_node_item_droplet.networks.v4
