--- a/tasks/node/digital_ocean.main.node.yml
+++ b/tasks/node/digital_ocean.main.node.yml
@@ -31,70 +31,36 @@
 
 - name: "{{ ext_node_title }} - main vars"
   set_fact:
-    ext_node_name: "{{ ext_node_params.name | replace('_', '-') }}"
     ext_node_main_credentials: "{{ ext_node_credentials.node | default({}) }}"
-    ext_node_instance_state: >-
-      {{ ext_node_params.state | default(ext_node_state, true) }}
     ext_node_user_data: "{{ ext_node_contents.user_data | default('') }}"
+    ext_node_hosts: []
   tags: ["no_print"]
 
 # Main
 
-- name: >-
-    {{ ext_node_title }} - {{ ext_node_instance_state }}
-    droplet - {{ ext_node_name }}
-  digital_ocean_droplet:
-    unique_name: yes
-    oauth_token: "{{ ext_node_main_credentials.api_token }}"
-    name: "{{ ext_node_name }}"
-    state: "{{ ext_node_instance_state }}"
-    region_id: "{{ ext_node_params.region_id }}"
-    size_id: "{{ ext_node_params.size_id }}"
-    image_id: "{{ ext_node_params.image_id }}"
-    wait_timeout: "{{ ext_node_params.wait_timeout | default(300, true) }}"
-    private_networking: "true"
-    ipv6: "{{ ext_node_params.ipv6 | default(omit, true) }}"
-    user_data: "{{ ext_node_user_data | default(omit, true) }}"
-  register: ext_node_details
-  tags: ["no_print_skipped"]
-
-- name: >-
-    {{ ext_node_title }} - tag the droplet {{ ext_node_name }}
-  digital_ocean_tag:
-    api_token: "{{ ext_node_main_credentials.api_token }}"
-    resource_id: "{{ ext_node_details.data.droplet.id }}"
-    name: "{{ ext_node_item }}"
-    state: "present"
-  loop: "{{ ext_node_params.tags }}"
+- name: "{{ ext_node_title }} - node (outer)"
+  include_tasks: "digital_ocean.item.node.yml"
+  vars:
+    ext_node_item_name: "{{ ext_node_item.name | replace('_', '-') }}"
+    ext_node_item_state: >-
+      {{
+        ext_node_item.absent
+        | default(false)
+        | ternary('absent', ext_node_state)
+      }}
+    ext_node_item_title: >-
+      {{ ext_node_title }} -
+      node [{{ ext_node_item_name }} ({{ ext_node_item_state }})]
+  loop: "{{ ext_node_params.replicas }}"
   loop_control:
     loop_var: ext_node_item
-    label: "{{ ext_node_name }} - {{ ext_node_item }}"
-  when: ext_node_instance_state == 'present'
-  tags: ["no_print_skipped"]
+    label: "{{ ext_node_item_name }}"
+  tags: ["no_print"]
 
 - name: "{{ ext_node_title }} - set result (tmp)"
   set_fact:
     ext_node_result:
-      name: "{{ ext_node_name }}"
-      state: "{{ ext_node_instance_state }}"
-      private_ip: >-
-        {{
-          ext_node_droplet.networks.v4
-          | selectattr('type', 'equalto', 'private')
-          | map(attribute='ip_address') | list | first | default('')
-        }}
-      public_ipv4: >-
-        {{
-          ext_node_droplet.networks.v4
-          | selectattr('type', 'equalto', 'public')
-          | map(attribute='ip_address') | list | first | default('')
-        }}
-      public_ipv6: >-
-        {{
-          ext_node_droplet.networks.v6
-          | selectattr('type', 'equalto', 'public')
-          | map(attribute='ip_address') | list | first | default('')
-        }}
+      hosts: "{{ ext_node_hosts }}"
   tags: ["no_print"]
 
 # Set Result
