--- a/tasks/dns/nsupdate.main.dns.yml
+++ b/tasks/dns/nsupdate.main.dns.yml
@@ -34,7 +34,7 @@
     ext_dns_zone: "{{ ext_dns_params.zone }}"
     ext_dns_record_type: "{{ ext_dns_params.dns_type }}"
     ext_dns_record: "{{ ext_dns_params.record }}"
-    ext_dns_data_list: "{{ ext_dns_params.data_list }}"
+    ext_dns_values: "{{ ext_dns_params.values }}"
     ext_dns_main_credentials: "{{ inner_service_credentials.dns | default({}) }}"
     ext_dns_ttl: "{{ ext_dns_params.ttl | default('') }}"
     ext_dns_protocol: "{{ ext_dns_params.protocol | default('') }}"
@@ -53,7 +53,14 @@
     zone: "{{ ext_dns_zone }}"
     type: "{{ ext_dns_record_type }}"
     record: "{{ ext_dns_record }}"
-    value: "{{ ext_dns_data_list | default([]) | map(attribute='value') }}"
+    value: >-
+      {{
+        ext_dns_values
+        | default([])
+        | lrd.cloud.simple_dict_prop_list(prop='value')
+        | map(attribute='value')
+        | list
+      }}
     ttl: "{{ ext_dns_ttl | default(omit, true) }}"
     service: "{{ ext_dns_service | default(omit, true) }}"
     proto: "{{ ext_dns_protocol | default(omit, true) }}"
