--- a/tasks/dns/godaddy.main.dns.yml
+++ b/tasks/dns/godaddy.main.dns.yml
@@ -34,7 +34,7 @@
     ext_dns_zone: "{{ ext_dns_params.zone }}"
     ext_dns_record_type: "{{ ext_dns_params.dns_type }}"
     ext_dns_record: "{{ ext_dns_params.record }}"
-    ext_dns_data_list: "{{ ext_dns_params.data_list }}"
+    ext_dns_values: "{{ ext_dns_params.values }}"
     ext_dns_main_credentials: "{{ ext_dns_credentials.dns | default({}) }}"
     ext_dns_ttl: "{{ ext_dns_params.ttl | default('') }}"
     ext_dns_priority: "{{ ext_dns_params.priority | default('') }}"
@@ -83,7 +83,7 @@
     ext_dns_final_state: "absent"
   when: >-
     (ext_dns_state == 'present') and
-    ((ext_dns_data_list | default([]) | length) == 0)
+    ((ext_dns_values | default([]) | length) == 0)
   tags: ["no_print"]
 
 - name: >-
@@ -106,7 +106,13 @@
 - block:
     - name: "{{ ext_dns_title }} - define the records"
       include_tasks: "godaddy.record.dns.yml"
-      loop: "{{ ext_dns_data_list | default([]) | flatten(levels=1) }}"
+      loop: >-
+        {{
+          ext_dns_values
+          | default([])
+          | lrd.cloud.simple_dict_prop_list(prop='value')
+          | list
+        }}
       loop_control:
         loop_var: ext_dns_item
         index_var: ext_dns_index
