--- a/tasks/dns/nsupdate.schema.dns.yml
+++ b/tasks/dns/nsupdate.schema.dns.yml
@@ -2,65 +2,102 @@ root: "dns_schema"
 schemas:
   dns_schema:
     type: "dict"
+    description: "nsupdate dns schema"
     props:
       params:
         schema: "params"
         non_empty: true
+        description: "nsupdate dns parameters"
       credentials:
         schema: "credentials"
         non_empty: true
+        description: "nsupdate dns credentials"
   params:
     type: "dict"
+    description: "nsupdate dns parameters schema"
     props:
       zone:
         type: "str"
         non_empty: true
+        description: >-
+          dns zone/domain (e.g. 'example.com'); the zone must already exist
       dns_type:
         type: "str"
         non_empty: true
+        choices:
+          - "A"
+          - "AAAA"
+          - "CNAME"
+          - "DS"
+          - "MX"
+          - "NS"
+          - "SPF"
+          - "SRV"
+          - "SSHFP"
+          - "TLSA"
+          - "TXT"
+        description: "dns type"
       record:
         type: "str"
         non_empty: true
+        description: "dns record to add/remove (according to state)"
       ttl:
         type: int
+        description: "dns record ttl (time-to-live)"
       priority:
         type: int
+        description: "dns record priority (for dns_type=MX and dns_type=SRV)"
       service:
         type: str
+        description: "dns record service (for dns_type=SRV)"
       protocol:
         type: str
+        description: "dns record protocol (for dns_type=SRV and dns_type=TLSA)"
       port:
         type: int
+        description: "dns record port (for dns_type=SRV and dns_type=TLSA)"
       weight:
         type: int
-      data_list:
+        description: "dns record weight (for dns_type=SRV)"
+      values:
         type: "list"
-        elem_schema: "dns_item"
+        elem_schema: "dns_value_item"
         elem_non_empty: "true"
-  dns_item:
-    type: "dict"
+        description: "list with strings or dictionaries representing the dns record value"
+  dns_value_item:
+    type: "simple_dict"
+    alternative_type: "string"
+    description: "dns record value schema"
     props:
       value:
         type: str
         non_empty: true
+        description: "dns record value"
   credentials:
     type: "dict"
+    description: "nsupdate dns credentials schema"
     props:
       dns:
         schema: "nsupdate_credentials"
         non_empty: true
+        description: "nsupdate dns main credentials"
   nsupdate_credentials:
     type: "dict"
+    description: "nsupdate dns main credentials schema"
     props:
       key_name:
         type: "str"
         non_empty: true
+        description: "nsupdate key name"
       key_secret:
         type: "str"
         non_empty: true
+        description: "nsupdate key secret"
       key_algorithm:
         type: "str"
         non_empty: true
+        description: "nsupdate key algorithm"
       server:
         type: "str"
         non_empty: true
+        description: "nsupdate key server"
