--- a/tasks/dns/cloudflare.main.dns.yml
+++ b/tasks/dns/cloudflare.main.dns.yml
@@ -34,7 +34,7 @@
     ext_dns_zone: "{{ ext_dns_params.zone }}"
     ext_dns_record_type: "{{ ext_dns_params.dns_type }}"
     ext_dns_record: "{{ ext_dns_params.record }}"
-    ext_dns_values: "{{ ext_dns_params.dns_values }}"
+    ext_dns_raw_value: "{{ ext_dns_params.value }}"
     ext_dns_main_credentials: "{{ ext_dns_credentials.dns | default({}) }}"
     ext_dns_ttl: "{{ ext_dns_params.ttl | default('') }}"
     ext_dns_priority: "{{ ext_dns_params.priority | default('') }}"
@@ -42,6 +42,18 @@
     ext_dns_protocol: "{{ ext_dns_params.protocol | default('') }}"
     ext_dns_port: "{{ ext_dns_params.port | default('') }}"
     ext_dns_weight: "{{ ext_dns_params.weight | default('') }}"
+  tags: ["no_print"]
+
+- name: "{{ ext_dns_title }} - dns values"
+  set_fact:
+    ext_dns_values: >-
+      {{
+        ext_dns_raw_value
+        | default([])
+        | lrd.cloud.simple_to_list
+        | lrd.cloud.simple_dict_prop_list(prop='value')
+        | list
+      }}
   tags: ["no_print"]
 
 - name: >-
@@ -58,13 +70,7 @@
     ext_dns_inner_weight: "{{ ext_dns_item.weight | default('') }}"
     ext_dns_solo: "{{ ext_dns_index == 0 }}"
     ext_dns_final_state: "present"
-  loop: >-
-    {{
-      ext_dns_values
-      | default([])
-      | lrd.cloud.simple_dict_prop_list(prop='value')
-      | list
-    }}
+  loop: "{{ ext_dns_values }}"
   loop_control:
     loop_var: ext_dns_item
     index_var: ext_dns_index
@@ -82,7 +88,7 @@
   when: >-
     (ext_dns_state == 'absent')
     or
-    ((ext_dns_values | default([]) | length) == 0)
+    ((ext_dns_values | length) == 0)
   tags: ["no_print"]
 
 # Set Result
