--- a/tasks/dns/nsupdate.main.dns.yml
+++ b/tasks/dns/nsupdate.main.dns.yml
@@ -29,17 +29,30 @@
 
 # Main
 
-- name: "{{ ext_dns_title }} - vars"
+- name: "{{ ext_dns_title }} - inner vars"
   set_fact:
     ext_dns_zone: "{{ ext_dns_params.zone }}"
     ext_dns_record_type: "{{ ext_dns_params.dns_type }}"
     ext_dns_record: "{{ ext_dns_params.record }}"
-    ext_dns_values: "{{ ext_dns_params.dns_values }}"
+    ext_dns_raw_value: "{{ ext_dns_params.value }}"
     ext_dns_main_credentials: "{{ inner_service_credentials.dns | default({}) }}"
     ext_dns_ttl: "{{ ext_dns_params.ttl | default('') }}"
     ext_dns_protocol: "{{ ext_dns_params.protocol | default('') }}"
     ext_dns_port: "{{ ext_dns_params.port | default('') }}"
     ext_dns_weight: "{{ ext_dns_params.weight | default('') }}"
+  tags: ["no_print"]
+
+- name: "{{ ext_dns_title }} - dns values"
+  set_fact:
+    ext_dns_values: >-
+      {{
+        ext_dns_raw_value
+        | default([])
+        | lrd.cloud.simple_to_list
+        | lrd.cloud.simple_dict_prop_list(prop='value')
+        | map(attribute='value')
+        | list
+      }}
   tags: ["no_print"]
 
 - name: >-
@@ -53,14 +66,7 @@
     zone: "{{ ext_dns_zone }}"
     type: "{{ ext_dns_record_type }}"
     record: "{{ ext_dns_record }}"
-    value: >-
-      {{
-        ext_dns_values
-        | default([])
-        | lrd.cloud.simple_dict_prop_list(prop='value')
-        | map(attribute='value')
-        | list
-      }}
+    value: "{{ ext_dns_values }}"
     ttl: "{{ ext_dns_ttl | default(omit, true) }}"
     service: "{{ ext_dns_service | default(omit, true) }}"
     proto: "{{ ext_dns_protocol | default(omit, true) }}"
